--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/bearer": "^1.3.0",
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/cors": "^1.3.3",
+    "@elysiajs/jwt": "^1.3.0",
+    "@elysiajs/swagger": "^1.3.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
+    "elysia": "latest",
+    "mysql2": "^3.14.1"
   },
   "devDependencies": {
     "bun-types": "latest"
