--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-DB_HOST= 
+DB_HOST= 43.228.86.116
 DB_PORT= 3306
 DB_USER= tanarat
-DB_NAME= 
-DB_PASS= 
-
-
-JWT_SECRET=
-API_KEY=BABABABBABA
+DB_NAME= tanarat_e-resume
+DB_PASS= "6ecCnC#bse+aMPDU"
