--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST= 
+DB_HOST= 43.228.86.116
 DB_PORT= 3306
 DB_USER= tanarat
-DB_NAME= 
-DB_PASS= 
+DB_NAME= tanarat_e-resume
+DB_PASS= "6ecCnC#bse+aMPDU"
 
 
 JWT_SECRET=
